--- a/app/assets/stylesheets/time_entries.css.scss
+++ b/app/assets/stylesheets/time_entries.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the time_entries controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+label {
+  display: block;
+  font-weight: bold;
+}
+
+textarea {
+  width: 80em;
+  height: 40em;
+}
