Added submit button

--- a/app/views/time_entries/new.html.erb
+++ b/app/views/time_entries/new.html.erb
@@ -5,5 +5,8 @@
     <%= label_tag :data, 'Enter Data (in CSV Format)' %>
     <%= text_area_tag :data %>
   </fieldset>
+  <fieldset>
+    <%= submit_tag 'Upload Data' %>
+  </fieldset>
 <% end %>
 
