--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -35,6 +35,14 @@ body {
     color: black;
   }
 }
+
+.title {
+  float: right;
+  margin-top: -40px;
+  margin-right: 40px;
+  color: white;
+}
+
 .messages {
   color: white;
   font-weight: bold;
