--- a/app/views/time_entries/new.html.erb
+++ b/app/views/time_entries/new.html.erb
@@ -1,4 +1,6 @@
-<h1>TimeEntries#new</h1>
+<% content_for(:title) do %>
+  Upload New Entries
+<% end %>
 
 <%= form_tag time_entries_path do |f| %>
   <fieldset>
